<resources>
    <string name="app_name">Silver App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_wishlist">Wish List</string>
    <string name="title_orders">Orders</string>
    <string name="ic_logo">ic_logo</string>
    <string name="str_contact_support">Contact support</string>
    <string name="str_profile">Personal info</string>
    <string name="more">more</string>
    <string name="txt_language">Languages</string>
    <string name="txt_tamil">Tamil</string>
    <string name="txt_english">English</string>
    <string name="txt_login">Login</string>
    <string name="txt_email_id">Email Id</string>
    <string name="txt_enter_email_id">Enter Email Id</string>
    <string name="txt_enter_password">Enter Password</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_password">Password</string>
    <string name="txt_enter_valid_email_and_password">Enter valid email id and password.</string>
    <string name="txt_enter_phone_number">Enter phone number</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_login_account">Login Account</string>
    <string name="txt_please_enter_phone_number_and_to_login">Please enter name and phone number to login.</string>
    <string name="txt_pick_from_phone">Picking from phone</string>
    <string name="txt_let_me_type">Let me type</string>
    <string name="txt_phone_number">Phone number</string>
    <string name="txt_name">Name</string>
    <string name="txt_name_required_error">Name is required</string>
    <string name="txt_phone_number_required">Valid number is required</string>
    <string name="txt_something_went_wrong">Something went wrong, contact Administrator</string>
    <string name="txt_verification_code">Verification Code</string>
    <string name="txt_we_have_enter_verification_code_to_this_mobile_number">Please enter the verfication code sent to this mobile number.</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_categories">Categories</string>
    <string name="txt_design_categories">Design Categories</string>
    <string name="title_design_category">Design Category</string>
    <string name="txt_Designs_list">Designs_list</string>
    <string name="txt_design">Design</string>
    <string name="txt_size">Size</string>
    <string name="txt_sizes">Sizes</string>
    <string name="txt_sizes_with_length_weight">Sizes (Length / Weight)</string>
    <string name="txt_add_to_cart">Add to cart</string>
    <string name="txt_order">Order Now</string>
    <string name="txt_length_and_weight">Length and Weight</string>
    <string name="txt_length">Length</string>
    <string name="txt_weight">Weight</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_button_add_on">Button Add One</string>
    <string name="txt_number_of_quantity">Number of Quantity</string>
    <string name="txt_data_saved_successfully">Data saved successfully</string>
    <string name="txt_something_went_wrong_please_contact_administrator">Something went wrong,please contact administrator</string>
</resources>