<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_90sdp"
        android:fontFamily="sans-serif-black"
        android:textSize="@dimen/_40sdp"
        android:textColor="@color/silver"
        android:text="@string/txt_login"/>

    <TextView
        android:id="@+id/emailIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:gravity="left"
        android:fontFamily="sans-serif"
        android:text="@string/txt_email_id"
        android:textColor="@color/silver"
        android:textSize="@dimen/_18sdp"/>

    <EditText
        android:id="@+id/edtxEmailId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/emailIdLabel"
        android:background="@color/silver"
        android:inputType="textEmailAddress"
        android:hint="@string/txt_enter_email_id"
        android:textColor="@color/white"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textCursorDrawable="@color/white"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxEmailId"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:gravity="left"
        android:fontFamily="sans-serif"
        android:text="@string/txt_password"
        android:textColor="@color/silver"
        android:textSize="@dimen/_18sdp"
        />


    <EditText
        android:id="@+id/edtxPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        android:background="@color/silver"
        android:inputType="textPassword"
        android:hint="@string/txt_enter_password"
        android:textColor="@color/white"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textCursorDrawable="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/edtxPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/txt_submit"
        android:textColor="@color/white"
        android:backgroundTint="@color/silver"/>

</androidx.constraintlayout.widget.ConstraintLayout>