<!--<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:background="@android:drawable/star_big_off" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/relativeLayout"
        android:layout_marginTop="-50dp"
        android:background="@drawable/waves" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="May I ask you phone number?"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/silver" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:orientation="horizontal"
        android:padding="15dp">

        <Spinner
            android:id="@+id/spinnerCountries"
            android:layout_width="120dp"
            android:visibility="gone"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:digits="0123456789"
            android:inputType="phone"
            android:hint="@string/txt_enter_phone_number"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_12sdp"
            android:background="@android:color/holo_blue_dark"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/silver"
        android:text="@string/txt_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"/>

</RelativeLayout>-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        android:id="@+id/guide5v"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        android:id="@+id/guide95v"/>

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/login_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/txtLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/guide5v"
        app:layout_constraintTop_toBottomOf="@+id/imgLogin"
        android:text="@string/txt_login_account"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/guide5v"
        app:layout_constraintRight_toLeftOf="@+id/guide95v"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginTitle"
        android:text="@string/txt_please_enter_phone_number_and_to_login"
        android:textColor="@color/silver"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        />

    <TextView
        android:id="@+id/txtPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/txtSubtitle"
        app:layout_constraintLeft_toRightOf="@id/guide5v"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/guide5v"
        app:layout_constraintTop_toBottomOf="@+id/txtPhoneLabel"
        app:layout_constraintRight_toLeftOf="@+id/guide95v"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/silver"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/layoutToggle"
        >
        <TextView
            android:id="@+id/txtLeftToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guide50v"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/white"
            android:layout_margin="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/txt_let_me_type"
            android:gravity="center"
            android:textColor="@color/black"
            android:padding="@dimen/_5sdp"
            />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:id="@+id/guide50v"/>

        <TextView
            android:id="@+id/txtRightToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/guide50v"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/silver"
            android:layout_margin="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/_5sdp"
            android:text="@string/txt_pick_from_phone"
            android:gravity="center"
            android:textColor="@color/black"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/txtPhoneEdtxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/guide5v"
        app:layout_constraintRight_toLeftOf="@+id/guide95v"
        app:layout_constraintTop_toBottomOf="@+id/layoutToggle"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_rectangle_border"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:drawableStart="@drawable/flag"
        android:paddingStart="@dimen/_15sdp"
        android:inputType="phone"
        android:textColor="@color/black"
        android:focusable="true"
        android:hint="@string/txt_phone_number"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txtPhoneEdtxt"
        app:layout_constraintLeft_toRightOf="@id/guide5v"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"/>


    <EditText
        android:id="@+id/txtEdtxName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/guide5v"
        app:layout_constraintRight_toLeftOf="@+id/guide95v"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_rectangle_border"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_15sdp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:hint="@string/txt_phone_number"
        android:autofillHints="@string/txt_phone_number" />

    <TextView
        android:id="@+id/txtContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/guide5v"
        app:layout_constraintRight_toLeftOf="@+id/guide95v"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/black"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/txtEdtxName"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/txt_continue"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="@dimen/_20sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>