<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rectangle"
    android:layout_marginStart="@dimen/_3sdp"
    android:layout_marginTop="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    >

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/idCheckBox"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_length"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/yellow"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toBottomOf="@+id/idCheckBox"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:id="@+id/txtLengthLabel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="9.5 in "
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/yellow"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="@+id/txtLengthLabel"
        app:layout_constraintLeft_toRightOf="@+id/txtLengthLabel"
        app:layout_constraintRight_toLeftOf="@+id/guide50v"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:gravity="center"
        android:id="@+id/txtLength"/>

    <View
        android:id="@+id/dvdrLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLength"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/light_silver"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_weight"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/bluish"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/dvdrLine"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/txtWeightLabel"
        android:layout_marginStart="@dimen/_10sdp"
        android:gravity="center"
        android:padding="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="108 g "
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/bluish"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@+id/dvdrLine"
        app:layout_constraintLeft_toRightOf="@+id/txtWeightLabel"
        app:layout_constraintRight_toRightOf="@+id/guide50v"
        android:id="@+id/txtWeight"
        android:gravity="center"
        android:padding="@dimen/_10sdp"/>

    <View
        android:id="@+id/dvdrLineSecond"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/light_silver"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide50v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_quantity"
        app:layout_constraintTop_toTopOf="@+id/txtLength"
        app:layout_constraintBottom_toTopOf="@+id/dvdrLine"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintLeft_toRightOf="@+id/guide50v"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/red_2"
        android:id="@+id/txtQuantity"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:visibility="visible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quantityValueLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dvdrLine"
        app:layout_constraintLeft_toRightOf="@+id/guide50v"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:backgroundTint="@color/light_silver_2"
        android:layout_marginStart="@dimen/_10sdp"
        android:visibility="visible"
        android:background="@drawable/rounded_corner_6_dp">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_silver_add"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/ic_add"
            android:layout_marginStart="@dimen/_7sdp"
            android:contentDescription="@string/txt_button_add_on" />

        <TextView
            android:id="@+id/quantityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "0"
            android:textColor="@color/red_2"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintLeft_toRightOf="@+id/ic_add"
            app:layout_constraintRight_toLeftOf="@+id/ic_minus"
            app:layout_constraintTop_toTopOf="@+id/ic_add"
            app:layout_constraintBottom_toBottomOf="@id/ic_add"
            android:gravity="center"
            android:layout_marginStart = "@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:contentDescription="@string/txt_number_of_quantity"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/ic_add"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/ic_add"
            android:src="@drawable/ic_baseline_minimize_24"
            android:gravity="center"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/light_silver_2"
            android:id="@+id/ic_minus"
            android:contentDescription="@string/txt_button_add_on" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>